# ml-stuff

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
machine_learning/: back_propagation.py  digits_classification.py  sgd_perceptron_training.py
