[tool.poetry]
name = "genai-101"
version = "0.1.0"
description = "Source code for the GenAI starter course"
authors = ["Stuart Knowles <Stuart.Knowles@softwire.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
scipy = "^1.12.0"
scikit-learn = "^1.4.1.post1"
pandas = "^2.2.1"
ipykernel = "^6.29.3"
ipympl = "^0.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
